Remove star import from DarCollectionResourceTest and convert Collections.singletonList to List.of